[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/misc/other/PauseController.gd" type="Script" id=1]
[ext_resource path="res://fonts/comfortaa/SmallerTextTheme.tres" type="Theme" id=4]
[ext_resource path="res://sprites/icons/gui/date.png" type="Texture" id=5]
[ext_resource path="res://sprites/icons/gui/time.png" type="Texture" id=6]
[ext_resource path="res://addons/controller_icons/assets/key/esc.png" type="Texture" id=7]
[ext_resource path="res://addons/controller_icons/assets/key/enter_alt.png" type="Texture" id=8]
[ext_resource path="res://addons/controller_icons/objects/TextureRect.gd" type="Script" id=9]
[ext_resource path="res://fonts/comfortaa/SmallTextTheme.tres" type="Theme" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.156863, 0.156863, 0.156863, 0.560784 )

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.2, 0.2, 0.572549 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/LevelInfoContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/DateTime:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/Input:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("QuitPanel:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 736, -88 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/path = NodePath("QuitPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 736, -88 ), Vector2( 736, 520 ), Vector2( 736, 496 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "onload"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Buttons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/LevelInfoContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/DateTime:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/Input:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
alignment = 2

[node name="ResumeButton" type="Button" parent="Panel/Buttons"]
margin_right = 192.0
margin_bottom = 37.0
focus_neighbour_bottom = NodePath("../QuitButton")
theme = ExtResource( 10 )
custom_colors/font_color_focus = Color( 0, 0.0470588, 0.54902, 1 )
custom_colors/font_color_hover = Color( 0, 0.0470588, 0.54902, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "RESUME"

[node name="QuitButton" type="Button" parent="Panel/Buttons"]
margin_top = 41.0
margin_right = 192.0
margin_bottom = 78.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
theme = ExtResource( 10 )
custom_colors/font_color_focus = Color( 0, 0.0470588, 0.54902, 1 )
custom_colors/font_color_hover = Color( 0, 0.0470588, 0.54902, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "EXIT"

[node name="LevelInfoContainer" type="VBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LevelName" type="Label" parent="Panel/LevelInfoContainer"]
margin_right = 185.0
margin_bottom = 37.0
theme = ExtResource( 10 )
text = "LevelName"
valign = 1

[node name="ActNumber" type="Label" parent="Panel/LevelInfoContainer"]
margin_top = 41.0
margin_right = 185.0
margin_bottom = 60.0
theme = ExtResource( 4 )
text = "ActNumber"
valign = 1

[node name="DateTime" type="HBoxContainer" parent="Panel"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -34.0
margin_right = 98.0
alignment = 2

[node name="Date" type="HBoxContainer" parent="Panel/DateTime"]
margin_right = 80.0
margin_bottom = 34.0

[node name="DateIcon" type="TextureRect" parent="Panel/DateTime/Date"]
margin_right = 16.0
margin_bottom = 34.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="DateLabel" type="Label" parent="Panel/DateTime/Date"]
margin_left = 20.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 26.0
theme = ExtResource( 4 )
text = "0.0.0000"

[node name="Time" type="HBoxContainer" parent="Panel/DateTime"]
margin_left = 84.0
margin_right = 125.0
margin_bottom = 34.0

[node name="TimeIcon" type="TextureRect" parent="Panel/DateTime/Time"]
margin_right = 16.0
margin_bottom = 34.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="Panel/DateTime/Time"]
margin_left = 20.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 26.0
theme = ExtResource( 4 )
text = "0:0"

[node name="Input" type="HBoxContainer" parent="Panel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -40.0
margin_right = -4.0
alignment = 2

[node name="ControllerTextureRect" type="TextureRect" parent="Panel/Input"]
margin_left = 9.0
margin_right = 49.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 8 )
expand = true
script = ExtResource( 9 )
path = "ui_accept"

[node name="UseLabel" type="Label" parent="Panel/Input"]
margin_left = 53.0
margin_top = 10.0
margin_right = 88.0
margin_bottom = 29.0
theme = ExtResource( 4 )
text = "USE"

[node name="ControllerTextureRect2" type="TextureRect" parent="Panel/Input"]
margin_left = 92.0
margin_right = 132.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 7 )
expand = true
script = ExtResource( 9 )
path = "ui_cancel"

[node name="BackLabel" type="Label" parent="Panel/Input"]
margin_left = 136.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 29.0
theme = ExtResource( 4 )
text = "BACK"

[node name="ActiveQuests" type="VBoxContainer" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_bottom = 192.0

[node name="LabelPanel" type="Panel" parent="Panel/ActiveQuests"]
margin_right = 192.0
margin_bottom = 40.0
rect_min_size = Vector2( 192, 40 )
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Panel/ActiveQuests/LabelPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -14.5
margin_right = 73.0
margin_bottom = 15.5
theme = ExtResource( 4 )
text = "Active Quests:"
align = 1
valign = 1

[node name="QuestsPanel" type="Panel" parent="Panel/ActiveQuests"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 148 )

[node name="QuestsList" type="ItemList" parent="Panel/ActiveQuests/QuestsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
max_text_lines = 3

[node name="QuitPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = -88.0
margin_right = 224.0
margin_bottom = -0.00012207
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="ExitLabel" type="Label" parent="QuitPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_right = 90.0
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "SAE"
align = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="QuitPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -37.0
margin_right = 224.0
custom_constants/separation = 40
alignment = 1

[node name="MenuButton" type="Button" parent="QuitPanel/ButtonsContainer"]
margin_left = 83.0
margin_right = 180.0
margin_bottom = 37.0
theme = ExtResource( 4 )
custom_colors/font_color_focus = Color( 0, 0.0470588, 0.54902, 1 )
custom_colors/font_color_hover = Color( 0, 0.0470588, 0.54902, 1 )
text = "MAINMENU"

[node name="ExitButton" type="Button" parent="QuitPanel/ButtonsContainer"]
margin_left = 220.0
margin_right = 256.0
margin_bottom = 37.0
theme = ExtResource( 4 )
custom_colors/font_color_focus = Color( 0, 0.0470588, 0.54902, 1 )
custom_colors/font_color_hover = Color( 0, 0.0470588, 0.54902, 1 )
text = "EXIT"

[node name="CancelButton" type="Button" parent="QuitPanel/ButtonsContainer"]
margin_left = 296.0
margin_right = 365.0
margin_bottom = 37.0
theme = ExtResource( 4 )
custom_colors/font_color_focus = Color( 0, 0.0470588, 0.54902, 1 )
custom_colors/font_color_hover = Color( 0, 0.0470588, 0.54902, 1 )
text = "CANCEL"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/exit = SubResource( 6 )
anims/onload = SubResource( 5 )

[connection signal="pressed" from="Panel/Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="QuitPanel/ButtonsContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="QuitPanel/ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="QuitPanel/ButtonsContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
